# ForkFlow

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  requirements-dev.txt
infra/: docker-compose.yml
services/auth/: README.md  alembic.ini
services/auth/alembic/: env.py  script.py.mako
services/auth/alembic/versions/: 202606260001_create_users_table.py
services/auth/app/: __init__.py  config.py  main.py
services/auth/app/application/: __init__.py  dto.py  exceptions.py  ports.py
services/auth/app/application/use_cases/: __init__.py  register_user.py
services/auth/app/domain/: __init__.py  entities.py  exceptions.py  value_objects.py
services/auth/app/infrastructure/: __init__.py
services/auth/app/infrastructure/db/: __init__.py  base.py  models.py  session.py
services/auth/app/infrastructure/security/: __init__.py  password_hasher.py
services/auth/app/presentation/: __init__.py
services/auth/app/presentation/http/: __init__.py  routes.py
services/auth/tests/: test_health.py
services/auth/tests/application/: test_register_user.py
services/auth/tests/domain/: test_email.py  test_password.py  test_user.py
services/auth/tests/infrastructure/db/: test_models.py
services/auth/tests/infrastructure/security/: test_password_hasher.py
